--- a/src/main/resources/public/template/layout/portalLayout.html
+++ b/src/main/resources/public/template/layout/portalLayout.html
@@ -7,18 +7,20 @@
         <th:block layout:fragment="scriptLink"></th:block>
     </head>
     <body>
-        <div class="alice-portal-container flex-column">
-            <div class="portal-search-top">
-                <a href="/portal/portalMain">
-                    <img class="left" th:src="@{/assets/media/icons/icon_logo.svg}" width="174.72" height="25" alt="Alice">
-                </a>
-                <div class="portal-title">Technical Support</div>
-                <div class="right login" sec:authorize="isAuthenticated()" onclick="location.href='/layout'"
-                     th:text="#{portal.label.main}"></div>
-                <div class="right login" sec:authorize="isAnonymous()" onclick="location.href='/login'"
-                     th:text="#{portal.label.login}"></div>
+        <div class="alice-wrapper">
+            <div class="portal-container flex-column">
+                <div class="header">
+                    <a href="/portal/portalMain">
+                        <img class="left" th:src="@{/assets/media/icons/icon_logo.svg}" width="174.72" height="25" alt="Alice">
+                    </a>
+                    <div class="title" th:text="#{portal.label.mainPhrase}"></div>
+                    <div class="right login" sec:authorize="isAuthenticated()" onclick="location.href='/layout'"
+                            th:text="#{portal.label.main}"></div>
+                    <div class="right login" sec:authorize="isAnonymous()" onclick="location.href='/login'"
+                            th:text="#{portal.label.login}"></div>
+                </div>
+                <th:block layout:fragment="content"></th:block>
             </div>
-            <th:block layout:fragment="content"></th:block>
         </div>
         <th:block layout:fragment="pageScript"></th:block>
     </body>
