--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -11,7 +11,7 @@
     <div class="portal-search-container">
         <div class="page-title">
             <h1 th:text="#{download.label.list}"></h1>
-            <h6 class="title-description" th:text="#{download.msg.portalDescription}"></h6>
+            <h6 class="description" th:text="#{download.msg.portalDescription}"></h6>
         </div>
         <div>
             <form id="searchFrm">
