--- a/src/main/resources/public/src/scss/portal/_browserGuide.scss
+++ b/src/main/resources/public/src/scss/portal/_browserGuide.scss
@@ -1,5 +1,6 @@
 .guide-body {
     background-color: $light-gray;
+    
     h1 {
         text-align: center;
         margin: 17.3125rem 19.6875rem 2.875rem 19.6875rem;
@@ -18,15 +19,20 @@
     width: 22.5rem; // 360px
     text-decoration: none;
     margin-left: 0.8125rem; // 13px
-    box-shadow: 0 0 0.9375rem rgba(204, 206, 209, 0.15); // 15px;
+    border: 0.0625rem solid $line-gray;
 
     img {
         margin-top: 3.875rem; // 62px
         width: 11.25rem; // 180px
         height: 11.25rem; // 180px
     }
+
     h3 {
         text-align: center;
         margin-top: 1.25rem; // 20px
+    }
+
+    &:hover {
+        box-shadow: 0 0 0.9375rem rgba(204, 206, 209, 0.3); // 15px;
     }
 }
