--- a/src/main/resources/public/src/scss/portal/_elements.scss
+++ b/src/main/resources/public/src/scss/portal/_elements.scss
@@ -1,48 +1,15 @@
-body, h1, h2, h3, h4, h5, h6, input, textarea, select, button, div, span {
-    color: $element-font-color;
-    font: {
-        family: $font-family;
-        size: $font-size-base; // 16px
-    }
+h1.title {
+  padding: 0.625rem 0 0.625rem 0.3125rem; // 10px 0 10px 5px
 }
 
-h1 {
-    @include h1();
-    padding: 0.625rem 0 0.625rem 0.3125rem; // 10px 0 10px 5px
-}
-
-h2 {
-    color: $light-black;
-    font: {
-        size: 1.75rem; // 28px
-        weight: 500;
-    }
-}
-
-h3 {
-    color: $light-black;
-    font: {
-        size: 1.5rem; // 24px
-        weight: 700;
-    }
-
-    .under-bar {
-        padding-bottom: 0.625rem; // 10px
-        margin-bottom: 0.625rem; //10px
-        border-bottom: 0.125rem solid $default-gray; // 2px
-        margin-top: 3.125rem; // 50px
-        &:first-of-type {
-            margin-top: 0;
-        }
-    }
-}
-
-h4 {
-    color: $light-black;
-    font: {
-        size: 1.125rem; // 18px
-        weight: 700;
-    }
+h3.under-bar {
+  padding-bottom: 0.625rem; // 10px
+  margin-bottom: 0.625rem; //10px
+  border-bottom: 0.125rem solid $default-gray; // 2px
+  margin-top: 3.125rem; // 50px
+   &:first-of-type {
+       margin-top: 0;
+   }
 }
 
 h4.under-bar {
@@ -51,43 +18,11 @@ h4.under-bar {
     border-bottom: 0.125rem solid $default-gray; // 2px
 }
 
-h5 {
-    color: $dark-gray;
-    font: {
-        size: 1rem; // 16px
-        weight: 400;
-    }
-}
-
-h6 {
-    @include h6();
-    padding: 0 0 0 0.625rem; // 10px
-}
-
-option {
-    &:hover {background-color: rgba(0, 80, 255, 0.05);}
-    &:visited{color:$alice-primary;background-color: white;}
-    &:active{color:$alice-primary;}
-    &:focus{color:$alice-primary}
-}
-
 @import "../template/_elements.scss";
 
 select {
-    height: 2.5rem; // 40px
-    font-size: $element-font-size;
-    border: $element-border solid $border-color;
-    border-radius: $element-border-radius;
-    padding: 0 10px;
     margin-right: 0.0625rem; // 1px
     vertical-align: middle;
-    background-color: $element-background-color;
-    &:focus {
-        outline: $element-border solid $alice-primary;
-        border-radius: $element-border-radius;
-    }
-    &.search-selectBox {
-    }
 }
 
 label {
@@ -100,33 +35,12 @@ label {
 }
 
 input {
-    padding-left: 0.625rem; // 10px
-    height: 2.25rem; // 36px
-    border: 0.0625rem solid #C8CED8; // 1px
-    border-radius: 0.0625rem; // 1px
-    font-size: 1rem; // 16px
-    &::placeholder {
-        color: $gray;
-    }
-    &:focus {
-        outline: 1px solid $point-blue; // 2px
-        border-radius: 0.0625rem; // 1px
-    }
     &.search {
         background: url($icon-folder-path + "icon_search.svg") no-repeat 100%-3;
-        background-color: $element-background-color;
+        background-color: $element-bg-color;
     }
     &.search-date {
         background: url($icon-folder-path + "icon_calendar.png") no-repeat 100%-5 50%;
-        background-color: $element-background-color;
+        background-color: $element-bg-color;
     }
-}
-a {
-    cursor: pointer;
-}
-
-.portal-title {
-    @include h4;
-    color: $white;
-    margin-left: 0.625rem; // 10px
 }
