--- a/src/main/resources/public/src/scss/portal/portal.scss
+++ b/src/main/resources/public/src/scss/portal/portal.scss
@@ -14,16 +14,10 @@
 @import '../template/_common.scss'; // 상속 불가
 @import '_variables.scss';
 @import '_fonts.scss';
-
-.alice-portal-container {
-    overflow: auto;
-    height: 100vh;
-    width: 100vw;
-}
-
 @import '_mixin.scss';
 @import '_elements.scss';
 @import '_column.scss';
+@import '_layout.scss';
 @import '_browserGuide.scss';
 @import '_signup.scss';
 @import '_error.scss';
