--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -60,25 +60,34 @@ $element-border-color:                        $line-gray;
 $element-border-width:                        0.0625rem; // 1px
 $element-border:                              $element-border-width solid $element-border-color;
 $element-border-radius:                       0.0625rem; // 1px
-$element-indent:                              0 0.625rem; // 10px 내부 들여쓰기
+$element-indent:                              0.625rem; // 10px 내부 들여쓰기
+
 // 사용자 미입력시 나올 문구 = placeholder
 $element-placeholder-font-color:              $gray;
+
 // 키보드 또는 선택시, 해당 element에 포커싱되었을때 사용하는 디자인 변수
 $element-focus-border-color:                  $point-blue;
 $element-focus-border-width:                  0.0625rem; // 1px
 $element-focus-border:                        $element-focus-border-width solid $element-focus-border-color;
+
 // element 마우스 오버시 사용하는 디자인 변수 
 $element-hover-border-color:                  $point-blue;
 $element-hover-border-width:                  0.0625rem; // 1px
 $element-hover-border:                        $element-hover-border-width solid $element-hover-border-color;
 $element-hover-box-shadow:                    0 0 0.3125rem 0 rgba(0, 152, 255, 0.2); // 흐림 5px
+
 // element disabled시 사용하는 디자인 변수
 $element-disabled-font-color:                 $gray;
 $element-disabled-bg-color:                   $light-gray;
 $element-disabled-border-color:               $line-gray;
 $element-disabled-border-width:               0.0625rem; // 1px
+
 // 체크박스, 라디오 버튼, 스위치 등 선택되었을때 (ON) 디자인 변수
 $element-checked-bg-color:                    $point-blue;
+
+//셀렉트 박스 선택되었을때 옵션에 사용하는 디자인 변수
+$element-selected-font-color:                 $point-blue;
+$element-hover-bg-color:                      rgba(0, 152, 255, 0.08);
 
 // headings
 $h1-font-size:                                $font-size-base * 2.25; // 36px
