--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -8,71 +8,73 @@
     <link th:href="@{/assets/vendors/gModal/css/gModal.css}" rel="stylesheet"/>
 </head>
 <body>
-<div class="alice-portal-container flex-row">
-    <div class="signup-background">
-        <img class="signup-logo" th:src="@{/assets/media/icons/icon_logo.svg}" width="274" height="40" alt="Zenius ITSM">
-        <img class="signup-main-image" th:src="@{/assets/media/images/signup/img_signup_main.png}" width="1310" height="800" alt="Signup Main">
-        <div class="signup-login-face">
-            <span class="signup-login-note" th:text="#{login.label.loginNote}"></span>
-            <a class="signup-btn signup-btn-login" href="/login" id="sendLogin" th:text="#{login.btn.login}"></a>
+<div class="alice-wrapper">
+    <div class="portal-container flex-row">
+        <div class="signup-background">
+            <img class="signup-logo" th:src="@{/assets/media/icons/icon_logo.svg}" width="274" height="40" alt="Zenius ITSM">
+            <img class="signup-main-image" th:src="@{/assets/media/images/signup/img_signup_main.png}" width="1310" height="800" alt="Signup Main">
+            <div class="signup-login-face">
+                <span class="signup-login-note" th:text="#{login.label.loginNote}"></span>
+                <a class="signup-btn signup-btn-login" href="/login" id="sendLogin" th:text="#{login.btn.login}"></a>
+            </div>
+        </div>
+        <div class="signup-form">
+            <h1 th:text="#{login.label.userSignUp}"></h1>
+            <div class="signup-base">
+                <form id="signUpForm" method="post" onsubmit="return false">
+                    <div class="signup-base-form">
+                        <input type="hidden" id="avatarUUID" name="avatarUUID" value=""/>
+                        <div>
+                            <label class="required" th:text="#{user.label.id}"></label>
+                            <div class="help-tooltip">
+                                <span class="help-tooltip-icon"></span>
+                                <div class="tooltip-contents">
+                                    <span th:utext="#{user.tooltip.idRule}"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <input type="text" id="userId" name="userId" maxlength="100" required="required">
+                        <div>
+                            <label class="required" href="#password-guide" tabindex="-1" th:text="#{user.label.password}"></label>
+                            <div class="help-tooltip">
+                                <span class="help-tooltip-icon"></span>
+                                <div class="tooltip-contents">
+                                    <span th:utext="#{user.tooltip.pwRule}"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <input type="password" id="password" name="password" maxlength="100" required="required">
+                        <label class="required" href="#password-guide" tabindex="-1" th:text="#{user.label.rePassword}"></label>
+                        <input type="password" id="rePassword" name="rePassword" maxlength="100" required="required">
+                        <label class="required" th:text="#{user.label.name}"></label>
+                        <input type="text" id="userName" name="userName" maxlength="100" required="required">
+                        <label class="required" th:text="#{user.label.email}"></label>
+                        <input type="text" id="email" name="email" maxlength="100" required="required">
+                        <label th:text="#{user.label.mobileNumber}"></label>
+                        <input type="text" id="mobileNumber" name="mobileNumber" maxlength="100">
+                        <label th:text="#{user.label.avatar}"></label>
+                        <div class="avatar-edit-contents">
+                            <div class="avatar-sm-contents">
+                                <div id="avatarDropZone"></div>
+                                <div class="avatar-description">
+                                    <span class="avatar-text" th:text="#{user.label.FileSizeLimit}"></span>
+                                    <span class="avatar-text" th:text="#{user.label.FileExtensionAllowed}"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <button class="signup-btn signup-btn-submit" id="userSignUp" th:text="#{login.btn.doSignUp}"
+                        onclick="userRegister()"></button>
+            </div>
         </div>
     </div>
-    <div class="signup-form">
-        <h1 th:text="#{login.label.userSignUp}"></h1>
-        <div class="signup-base">
-            <form id="signUpForm" method="post" onsubmit="return false">
-                <div class="signup-base-form">
-                    <input type="hidden" id="avatarUUID" name="avatarUUID" value=""/>
-                    <div>
-                        <label class="required" th:text="#{user.label.id}"></label>
-                        <div class="help-tooltip">
-                            <span class="help-tooltip-icon"></span>
-                            <div class="tooltip-contents">
-                                <span th:utext="#{user.tooltip.idRule}"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <input type="text" id="userId" name="userId" maxlength="100" required="required">
-                    <div>
-                        <label class="required" href="#password-guide" tabindex="-1" th:text="#{user.label.password}"></label>
-                        <div class="help-tooltip">
-                            <span class="help-tooltip-icon"></span>
-                            <div class="tooltip-contents">
-                                <span th:utext="#{user.tooltip.pwRule}"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <input type="password" id="password" name="password" maxlength="100" required="required">
-                    <label class="required" href="#password-guide" tabindex="-1" th:text="#{user.label.rePassword}"></label>
-                    <input type="password" id="rePassword" name="rePassword" maxlength="100" required="required">
-                    <label class="required" th:text="#{user.label.name}"></label>
-                    <input type="text" id="userName" name="userName" maxlength="100" required="required">
-                    <label class="required" th:text="#{user.label.email}"></label>
-                    <input type="text" id="email" name="email" maxlength="100" required="required">
-                    <label th:text="#{user.label.mobileNumber}"></label>
-                    <input type="text" id="mobileNumber" name="mobileNumber" maxlength="100">
-                    <label th:text="#{user.label.avatar}"></label>
-                    <div class="avatar-edit-contents">
-                        <div class="avatar-sm-contents">
-                            <div id="avatarDropZone"></div>
-                            <div class="avatar-description">
-                                <span class="avatar-text" th:text="#{user.label.FileSizeLimit}"></span>
-                                <span class="avatar-text" th:text="#{user.label.FileExtensionAllowed}"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <button class="signup-btn signup-btn-submit" id="userSignUp" th:text="#{login.btn.doSignUp}"
-                    onclick="userRegister()"></button>
-        </div>
-    </div>
-</div>
 
-<div id="divProgressBar"
-     style="z-index:1000; position:fixed; display:block; width:100%; height:100%; top:50; left:0; right:0; bottom:0; background-color:grey; opacity:0.5; pointer-events:all;">
-    <img id="aProgressBar" name="aProgressBar" th:src="@{/assets/media/images/loading_w_dark.gif}"
-         style="position: absolute; left: 50%; top: 0; bottom:0; margin:auto;"/>
+    <div id="divProgressBar"
+         style="z-index:1000; position:fixed; display:block; width:100%; height:100%; top:50; left:0; right:0; bottom:0; background-color:grey; opacity:0.5; pointer-events:all;">
+        <img id="aProgressBar" name="aProgressBar" th:src="@{/assets/media/images/loading_w_dark.gif}"
+             style="position: absolute; left: 50%; top: 0; bottom:0; margin:auto;"/>
+    </div>
 </div>
 <script th:src="@{/assets/vendors/gModal/js/gModal.js}"></script>
 <script th:src="@{/assets/vendors/rsa/jsbn.js}"></script>
