--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -9,37 +9,39 @@
     <title th:text="#{project.label.name}"></title>
 </head>
 <body>
-<div class="alice-portal-container flex-row">
-    <div class="login-background">
-        <img class="login-logo" th:src="@{/assets/media/icons/icon_logo.svg}" width="274" height="40" alt="Zenius ITSM">
-        <img class="login-main-image" th:src="@{/assets/media/images/login/img_login_main.png}" width="1071" height="710" alt="Login Main">
-    </div>
-    <button type="button" class="login-btn login-btn-return" th:text="#{common.btn.return}"
-            onclick="location.href='/portal/portalMain'"></button>
-    <div class="login-form">
-        <h1 th:text="#{portal.label.login}"></h1>
-        <div class="login-base">
-            <form id="loginForm" name="loginForm" method="post" th:action="@{/login}">
-                <input type="hidden" id="userId" name="userId"/>
-                <input type="hidden" id="password" name="password"/>
-            </form>
-            <div class="login-base-form">
-                <label th:text="#{user.label.id}"></label>
-                <input type="text" id="uid" name="uid" maxlength="100" required="required">
-                <label tabindex="-1" th:text="#{user.label.password}"></label>
-                <input type="password" id="upasswd" name="upasswd" maxlength="100" required="required">
+<div class="alice-wrapper">
+    <div class="portal-container flex-row">
+        <div class="login-background">
+            <img class="login-logo" th:src="@{/assets/media/icons/icon_logo.svg}" width="274" height="40" alt="Zenius ITSM">
+            <img class="login-main-image" th:src="@{/assets/media/images/login/img_login_main.png}" width="1071" height="710" alt="Login Main">
+        </div>
+        <button type="button" class="login-btn login-btn-return" th:text="#{common.btn.return}"
+                onclick="location.href='/portal/portalMain'"></button>
+        <div class="login-form">
+            <h1 th:text="#{portal.label.login}"></h1>
+            <div class="login-base">
+                <form id="loginForm" name="loginForm" method="post" th:action="@{/login}">
+                    <input type="hidden" id="userId" name="userId"/>
+                    <input type="hidden" id="password" name="password"/>
+                </form>
+                <div class="login-base-form">
+                    <label th:text="#{user.label.id}"></label>
+                    <input type="text" id="uid" name="uid" maxlength="100" required="required">
+                    <label tabindex="-1" th:text="#{user.label.password}"></label>
+                    <input type="password" id="upasswd" name="upasswd" maxlength="100" required="required">
+                </div>
+                <button class="login-btn login-btn-submit" id="sendLogin" th:text="#{login.btn.login}" onclick="onLogin()"></button>
             </div>
-            <button class="login-btn login-btn-submit" id="sendLogin" th:text="#{login.btn.login}" onclick="onLogin()"></button>
-        </div>
-        <div class="login-divide" th:text="#{login.label.or}"></div>
-        <div class="login-platform">
-            <button class="login-btn login-btn-google login-btn-google-icon" id="google" th:text="#{login.btn.googleLogin}" onclick="onPlatFormLogin(this.id)"></button>
-            <button class="login-btn login-btn-kakao login-btn-kakao-icon" id="kakao" th:text="#{login.btn.kakaoLogin}" onclick="onPlatFormLogin(this.id)"></button>
-        </div>
-        <div class="login-other">
-            <div class="login-other-signUp"><a href="/certification/signup" th:text="#{login.label.signupNote}"></a></div>
-            <div class="login-other-findPwd"><a href="#N" th:text="#{login.label.findPassword}"></a></div>
-            <div class="login-other-findId"><a href="#N" th:text="#{login.label.findId}"></a></div>
+            <div class="login-divide" th:text="#{login.label.or}"></div>
+            <div class="login-platform">
+                <button class="login-btn login-btn-google login-btn-google-icon" id="google" th:text="#{login.btn.googleLogin}" onclick="onPlatFormLogin(this.id)"></button>
+                <button class="login-btn login-btn-kakao login-btn-kakao-icon" id="kakao" th:text="#{login.btn.kakaoLogin}" onclick="onPlatFormLogin(this.id)"></button>
+            </div>
+            <div class="login-other">
+                <div class="login-other-signUp"><a href="/certification/signup" th:text="#{login.label.signupNote}"></a></div>
+                <div class="login-other-findPwd"><a href="#N" th:text="#{login.label.findPassword}"></a></div>
+                <div class="login-other-findId"><a href="#N" th:text="#{login.label.findId}"></a></div>
+            </div>
         </div>
     </div>
 </div>
