--- a/src/main/resources/public/template/portal/download/downloadView.html
+++ b/src/main/resources/public/template/portal/download/downloadView.html
@@ -10,11 +10,9 @@
 <th:block layout:fragment="content">
     <div class="portal-search-container">
         <div class="contents-view">
-            <div class="header">
-                <div class="page-title">
-                    <h1 th:text="#{download.label.download}"></h1>
-                    <h6 class="title-description" th:text="#{download.msg.portalDescription}"></h6>
-                </div>
+            <div class="page-title">
+                <h1 th:text="#{download.label.download}"></h1>
+                <h6 class="description" th:text="#{download.msg.portalDescription}"></h6>
             </div>
         </div>
     </div>
